fixed small width screen padding for "Logo" bg color still doesn't stretch to edge of screen...why?

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ body {
     font-size: 24px;
     font-weight: 900;
     color: #f9faf8;
-
+    padding: 16px;
+    padding-top: 8px;
 }
 
 .container {
